--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Anna Kozh
-email: anitakonkova@gmail.coml@gmail.com
+email: hi@annakozh.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -36,7 +36,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-include: [_site]
+#include: [_site]
 
 # Exclude from processing.
 # The following items will not be processed, by default.
