--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         #run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-        run: jekyll --no-auto --server
+        run: bundle exec jekyll --no-auto --server
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
