--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: ""
 url: ""
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  anna-kozh
 
 is_under_construction: false
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
 
