--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,6 +39,12 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Debugging - Before running script
+        run: echo "Running the script now"
+      - name: Run reading time calculation script
+        run: ruby calculate_reading_time.rb
+      - name: Debugging - After running script
+        run: echo "Script execution completed"
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
