--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ baseurl: ""
 url: ""
 github_username:  anna-kozh
 
-is_under_construction: true
-is_local: false
+is_under_construction: false
 
 # Build settings
 # theme: minima
