--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,8 @@ is_under_construction: false
 plugins:
   - jekyll-feed
 
-include: [_site]
+include:
+  - .well-known
 
 # Exclude from processing.
 # The following items will not be processed, by default.
